Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10705

Mac OS X: The hide others menu item in the Apple menu does not get disabled when it is clicked on

XMLWordPrintable

    • macOS
    • 8f23a6be1069455e609e8bea7527726c24bebb36 (4.8)

      The hide others menu item in the Apple menu does not get disabled when it is clicked on, in addition the other hide option should be disabled too but neither of them are disabled. When comparing to a native application such as Finder or XCode then these options are disabled when Hide Others is clicked.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            pamatila Pasi Matilainen (Inactive)
            anshaw Andy Shaw (closed Nokia identity) (Inactive)
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes