src/gui/kernel/qcocoamenuloader_mac.mm
@@ -260,5 +260,17 @@ QT_USE_NAMESPACE
  {
      [NSApp orderFrontCharacterPalette:sender];
  }
+
+- (BOOL)validateMenuItem:(NSMenuItem*)menuItem
+{
+    if ([menuItem action] == @selector(hide:)
+        || [menuItem action] == @selector(hideOtherApplications:)
+        || [menuItem action] == @selector(unhideAllApplications:)) {
+        return [NSApp validateMenuItem:menuItem];
+    } else {
+        return [menuItem isEnabled];
+    }
+}
+
 @end
 #endif // QT_MAC_USE_COCOA
